src/passes/snapshots/lumina2__passes__hir_gen__test__assign_reassign.snap
---
source: src/passes/hir_gen.rs
expression: "Assign(Assign { variable: ExpressionId(0), value: ExpressionId(1) })"
---
Assign(
    Assign {
        variable: ExpressionId(
            0,
        ),
        value: ExpressionId(
            1,
        ),
    },
)
