src/passes/snapshots/lumina2__passes__hir_gen__test__binary_simple.snap
---
source: src/passes/hir_gen.rs
expression: "Binary(Binary { lhs: ExprId(0), op: Plus(Plus), rhs: ExprId(1) })"
---
Binary(
    Binary {
        lhs: ExprId(
            0,
        ),
        op: Plus(
            Plus,
        ),
        rhs: ExprId(
            1,
        ),
    },
)
