src/passes/snapshots/lumina2__passes__hir_gen__test__block_empty.snap
---
source: src/passes/hir_gen.rs
expression: "Block { statements: [], expression: None }"
---
Block {
    statements: [],
    expr: ExprId(
        0,
    ),
}
