src/passes/snapshots/lumina2__passes__hir_gen__test__block_expression.snap
---
source: src/passes/hir_gen.rs
expression: "Block { statements: [], expression: Some(ExprId(0)) }"
---
Block {
    statements: [],
    expr: ExprId(
        0,
    ),
}
