src/passes/snapshots/lumina2__passes__hir_gen__test__block_statement.snap
---
source: src/passes/hir_gen.rs
expression: "Block { statements: [StatementId(0)], expression: None }"
---
Block {
    statements: [
        StatementId(
            0,
        ),
    ],
    expression: ExpressionId(
        1,
    ),
}
