src/passes/snapshots/lumina2__passes__hir_gen__test__call_no_parameters.snap
---
source: src/passes/hir_gen.rs
expression: "Call(Call { callee: ExpressionId(0), arguments: [] })"
---
Call(
    Call {
        callee: ExpressionId(
            0,
        ),
        arguments: [],
    },
)
