src/passes/snapshots/lumina2__passes__hir_gen__test__call_with_parameters.snap
---
source: src/passes/hir_gen.rs
expression: "Call(Call { callee: ExpressionId(0), arguments: [ExpressionId(1), ExpressionId(2)] })"
---
Call(
    Call {
        callee: ExpressionId(
            0,
        ),
        arguments: [
            ExpressionId(
                1,
            ),
            ExpressionId(
                2,
            ),
        ],
    },
)
