src/passes/snapshots/lumina2__passes__hir_gen__test__call_with_params.snap
---
source: src/passes/hir_gen.rs
expression: "Call(Call { callee: ExprId(0), arguments: [ExprId(1), ExprId(2)] })"
---
Call(
    Call {
        callee: ExprId(
            0,
        ),
        arguments: [
            ExprId(
                1,
            ),
            ExprId(
                2,
            ),
        ],
    },
)
