src/passes/snapshots/lumina2__passes__hir_gen__test__empty.snap
---
source: src/passes/hir_gen.rs
expression: "FunctionSignature { name: StringId(0), parameters: [], return_ty: None } (None)"
---
FunctionSignature {
    parameters: [],
    return_ty: TypeId(
        1,
    ),
}
