src/passes/snapshots/lumina2__passes__hir_gen__test__empty_with_self.snap
---
source: src/passes/hir_gen.rs
expression: "FunctionSignature { name: StringId(0), parameters: [], return_ty: None } (Some(U8))"
---
FunctionSignature {
    parameters: [],
    return_ty: TypeId(
        1,
    ),
}
